# Clean

./: .gitignore  AUTHORS  CMakeLists.txt  README
CMake/: CleanMacros.cmake  FindWayland.cmake
Core/: CMakeLists.txt
Core/doc/: dev.d
Core/src/Clean/: Allocate.cpp  Allocate.h  AtomicCounter.h  Buffer.cpp  Buffer.h  BuildableShaderMapper.cpp  BuildableShaderMapper.h  Camera.cpp  Camera.h  ConcurrentQueue.h  Core.cpp  Core.h  Driver.cpp  Driver.h  DriverManager.cpp  DriverManager.h  DriverResource.cpp  DriverResource.h  Dynlib.cpp  Dynlib.h  DynlibManager.cpp  DynlibManager.h  EffectParameter.cpp  EffectParameter.h  EffectParameterProvider.h  EffectSession.cpp  EffectSession.h  Emitter.h  Endianness.h  Exception.cpp  Exception.h  FileLoader.h  FileSystem.cpp  FileSystem.h  GenBuffer.cpp  GenBuffer.h  Handled.h  Hash.h  Image.cpp  Image.h  (+75 more)
Main/: CMakeLists.txt
Main/src/: main.cpp
Modules/GlDriver/: CMakeLists.txt  README
Modules/GlDriver/All/: GlBuffer.cpp  GlBuffer.h  GlBufferManager.cpp  GlBufferManager.h  GlCheckError.cpp  GlCheckError.h  GlContext.h  GlDriver.cpp  GlDriver.h  GlDriverMain.cpp  GlInclude.cpp  GlInclude.h  GlRenderPipeline.cpp  GlRenderPipeline.h  GlRenderQueue.cpp  GlRenderQueue.h  GlRenderWindow.cpp  GlRenderWindow.h  GlShader.cpp  GlShader.h  GlShaderManager.cpp  GlShaderManager.h  GlTexture.cpp  GlTexture.h
Modules/GlDriver/Cocoa/: OSXGlApplication.h  OSXGlApplication.mm  OSXGlApplicationDelegate.h  OSXGlApplicationDelegate.mm  OSXGlContext.h  OSXGlContext.mm  OSXGlRenderWindow.h  OSXGlRenderWindow.mm  OSXGlView.h  OSXGlView.mm  OSXPrerequisites.h  OSXWindowDelegate.h  OSXWindowDelegate.mm
Modules/GlDriver/Win32/: WinGlContext.cpp  WinGlContext.h  WinGlInclude.cpp  WinGlInclude.h  WinGlRenderWindow.cpp  WinGlRenderWindow.h
Modules/JSONMapperLoader/: CMakeLists.txt
Modules/JSONMapperLoader/All/: Loader.cpp  Loader.h  Main.cpp
Modules/JSONMapperLoader/CMake/: FindRapidJSON.cmake
Modules/OBJMeshLoader/: CMakeLists.txt
Modules/OBJMeshLoader/All/: MtlLoader.cpp  MtlLoader.h  OBJLoader.cpp  OBJLoader.h  main.cpp
Modules/StbiLoader/: CMakeLists.txt
Modules/StbiLoader/All/: Main.cpp  STBILoader.cpp  STBILoader.h
